--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.30.1",
     "start-server-and-test": "^2.0.10",
     "ts-jest": "^29.2.5",
     "tsx": "^4.19.3",
