--- a/package.json
+++ b/package.json
@@ -4,8 +4,26 @@
   "description": "State change logging utilities for frontend and backend",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./backend": {
+      "types": "./dist/backend/index.d.ts",
+      "default": "./dist/backend/index.js"
+    }
+  },
+  "bin": {
+    "stateLogServer": "dist/backend/cli.js"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "npm run build",
     "test": "jest",
     "test:frontend": "jest --selectProjects frontend",
     "test:backend": "jest --selectProjects backend",
@@ -14,14 +32,25 @@
     "cypress:run": "cypress run",
     "cypress:open": "cypress open"
   },
-  "keywords": ["react", "hook", "state", "logging"],
+  "keywords": [
+    "react",
+    "hook",
+    "state",
+    "logging"
+  ],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "express": "^4.21.2",
+    "pg": "^8.14.1"
+  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.10",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
